fix and add session

--- a/src/main/resources/templates/lab3.html
+++ b/src/main/resources/templates/lab3.html
@@ -78,7 +78,7 @@
       Plotly.newPlot('plot2', data, layout);
     </script>
   </div>
-  <h3><p>X = <strong th:text="${interpolation.getXi()}"></strong></p></h3>
+  <h3><p>X = <strong th:text="${errorsData.getXi()}"></strong></p></h3>
   <table class="table">
     <thead>
     <tr>
