--- a/src/main/resources/templates/lab3.html
+++ b/src/main/resources/templates/lab3.html
@@ -33,6 +33,13 @@
       <button type="button" class="btn btn-secondary" id="save-file-btn">Save to File</button>
       <button type="button" class="btn btn-secondary" id="open-file-btn">Open File</button>
     </div>
+    <div class="col-md-6">
+      <h2>Function:</h2>
+      <dl></dl>
+      <div class="container">
+        <img src="../static/lab3.webp" alt="Example Image" width="327" height="55" >
+      </div>
+    </div>
   </div>
 </div>
 <h1></h1>
