--- a/src/main/resources/templates/lab3.html
+++ b/src/main/resources/templates/lab3.html
@@ -37,7 +37,7 @@
       <h2>Function:</h2>
       <dl></dl>
       <div class="container">
-        <img src="https://github.com/Dementris/AMOLabs/blob/072be5c075b2735d2d7d683c0feb1ff4f79be384/src/main/resources/static/lab3.webp" alt="Example Image" width="327" height="55" >
+        <img src="https://raw.githubusercontent.com/Dementris/AMOLabs/master/src/main/resources/static/lab3.webp" alt="Example Image" width="327" height="55" >
       </div>
     </div>
   </div>
