--- a/src/main/resources/templates/lab4.html
+++ b/src/main/resources/templates/lab4.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="https://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>Lab 4: Iterations method</title>
   <!-- MaxCDN Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -15,26 +16,25 @@
   <div class="row">
     <div class="col-md-6">
       <h2>Input</h2>
-      <form>
-        <div class="form-group">
-          <label for="x0">Variable x0</label>
-          <input type="number" class="form-control" id="x0" step="0.01" placeholder="Enter variable x0">
-        </div>
+      <form th:action="lab4" th:method="post" th:object="${equationData}" >
         <div class="form-group">
           <label for="epsilon">Epsilon</label>
-          <input type="number" class="form-control" id="epsilon" step="0.01" placeholder="Enter Epsilon">
+          <input type="number" class="form-control" id="epsilon"
+                 th:field="*{stringEpsilon}" step="0.01" placeholder="Enter Epsilon" >
         </div>
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
               <label for="range-from">From</label>
-              <input type="number" class="form-control" id="range-from" step="0.01" placeholder="Enter  from">
+              <input type="number" class="form-control" id="range-from" step="0.01" placeholder="Enter  from" max="5"
+              min="-5" th:field="*{start}">
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
               <label for="range-to">To</label>
-              <input type="number" class="form-control" id="range-to" step="0.01" placeholder="Enter to">
+              <input type="number" class="form-control" id="range-to" step="0.01" placeholder="Enter to" max="5" min="-5"
+                     th:field="*{stop}">
             </div>
           </div>
         </div>
@@ -46,8 +46,21 @@
     </div>
     <div class="col-md-6">
       <h2>Function:</h2>
+      <div id="plot"></div>
+      <script th:inline="javascript">
+        var x1 = [[${x}]];
+        var y1 = [[${y}]];
+        var trace1 = { x: x1, y: y1, type: 'scatter',name: 'function', mode: 'lines+points', marker: {color: 'red'},
+          hovertemplate: 'x: %{x:.2f}<br>y: %{y:.4f}<extra></extra>', line: {shape: 'spline', smothing: 1}};
+        var x2 = [[${x}]];
+        var y2 = [[${zeros}]];
+        var trace2 = { x: x2, y: y2, type: 'scatter',name: 'interpolated', mode: 'lines+points', marker: {color: 'blue'},
+          hovertemplate: 'x: %{x:.2f}<br>y: %{y:.4f}<extra></extra>', line: {shape: 'spline', smothing: 1}};
+        var data = [trace1, trace2];
+        var layout = { title: 'Function', xaxis: { title: 'x', tickformat: '.2f' }, yaxis: { title: 'y', tickformat: '.2f' } };
+        Plotly.newPlot('plot', data, layout);
+      </script>
       <div class="container">
-        <!-- Add your function image or description here -->
       </div>
     </div>
   </div>
