--- a/src/main/resources/templates/lab4.html
+++ b/src/main/resources/templates/lab4.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Lab 4: Task Name</a>
+  <a class="navbar-brand" href="/">Lab 4: Iteration method</a>
 </nav>
 
 <div class="container mt-5">
@@ -70,6 +70,10 @@
     </div>
     <div class="col-md-6">
       <h2>Function:</h2>
+      <dl></dl>
+      <div class="container">
+        <img src="https://raw.githubusercontent.com/Dementris/AMOLabs/master/src/main/resources/static/lab4.webp" alt="Example Image" width="327" height="55" >
+      </div>
       <div id="plot"></div>
       <script th:inline="javascript">
         var x1 = [[${x}]];
