--- a/src/main/resources/templates/lab3.html
+++ b/src/main/resources/templates/lab3.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Lab 3: Aitkens interpolation</a>
+  <a class="navbar-brand" href="/">Lab 3: Aitkens interpolation</a>
 </nav>
 
 <div class="container mt-5">
