--- a/src/main/resources/templates/lab2.html
+++ b/src/main/resources/templates/lab2.html
@@ -40,7 +40,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Lab 2: "Computational complexity of sorting algorithms".</a>
+  <a class="navbar-brand" href="/">Lab 2: "Computational complexity of sorting algorithms".</a>
 </nav>
 
 <div class="container mt-5">
